--- a/index.html
+++ b/index.html
@@ -6,6 +6,32 @@
 <title>レイアウトの練習</title>
 </head>
   <body>
-   
+   <header>
+     <p>ヘッダー</p>
+     <p>ヘッダー</p>
+     <p>ヘッダー</p>
+    </header>
+    <article id="main">
+      <h1>本文1</h1>
+      <p>本文１</p>
+      <p>本文１</p>
+      <p>本文１</p>
+    </article>
+    <article id="main2">
+      <h1>本文２<\h1>
+        <p>本文２</p>
+        <p>本文２</p>
+        <p>本文２</p>
+        </article>
+        <aside>
+          <p>サイドバー</p>
+          <p>サイドバー</p>
+          <p>サイドバー</p>
+        </aside>
+        <footer>
+          <p>フッター</p>
+          <p>フッター</p>
+          <p>フッター</p>
+        </footer>
   </body>
 </html>
