--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <p>ヘッダー</p>
      <p>ヘッダー</p>
     </header>
-    <article id="main">
+    <article id="main1">
       <h1>本文1</h1>
       <p>本文１</p>
       <p>本文１</p>
