--- a/index.html
+++ b/index.html
@@ -13,18 +13,30 @@
     </header>
     <section id="main">
       <h1>本文</h1>
-    <article id="main1">
+    <article class="box">
       <h2>本文1</h2>
       <p>本文１</p>
       <p>本文１</p>
       <p>本文１</p>
     </article>
-    <article id="main2">
+    <article class="box">
       <h2>本文２</h2>
         <p>本文２</p>
         <p>本文２</p>
         <p>本文２</p>
         </article>
+      <article class="box">
+        <h2>本文３</h2>
+        <p>本文３</p>
+      </article>
+      <article class="box">
+        <h2>本文４</h2>
+        <p>本文４</p>
+        <p>本文４</p>
+        <p>本文４</p>
+        <p>本文４</p>
+        <p>本文４</p>
+      </article>
     </section>
         <aside>
           <p>サイドバー</p>
