--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </header>
     <section id="main">
       <h1>本文</h1>
+      <img id="moons.png" src="moons.png" alt="moons">
     <article class="box">
       <h2>本文1</h2>
       <p>本文１</p>
